2ano/2semestre/POO/POO/2016-17/Testes e Exames/Testes e Exames/Teste_2016_POO_MIEI_ResoluÆo/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução
-d
C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\ParqueComRecusados.java
<---- end of javadoc command ---->
Loading source file C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\ParqueComRecusados.java...
Constructing Javadoc information...
C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\IParque.java:6: error: cannot find symbol
    public void sai(String matricula) throws VeiculoNaoExisteException;
                                             ^
  symbol:   class VeiculoNaoExisteException
  location: interface IParque
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\ParqueComRecusados.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\package-frame.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\package-summary.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\allclasses-frame.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\allclasses-noframe.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\index.html...
Generating C:\Users\André\Documents\POO\Testes e Exames\Teste_2016_POO_MIEI_Resolução\doc\stylesheet.css...
1 warning
